--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.animsh.nothut"
+        applicationId "com.animsh.notehut"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
