--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,9 @@ dependencies {
     // GSON
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    // custom check box
+    implementation 'net.igenius:customcheckbox:1.3'
+    implementation 'com.uniquestudio:checkbox:1.0.10'
+
 
 }
