--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -58,9 +58,7 @@ dependencies {
     // GSON
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    // custom check box
-    implementation 'net.igenius:customcheckbox:1.3'
-    implementation 'com.uniquestudio:checkbox:1.0.10'
-
+    // animated check box
+    implementation 'com.github.animsh:AnimatedCheckBox:1.0.0'
 
 }
